# okepy

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: autorelease.yml  ci.yml  install.yml  release.yml  workflow.yml
docs/: ARCHITECTURE.md  PRD.md  PROGRESS.md  ROADMAP.md
scripts/: bump_version.py  install.ps1  install.sh
src/okapy/: __init__.py  __main__.py
src/okapy/cli/: __init__.py
src/okapy/cli/commands/: create.py
src/okapy/core/: config.py  feature.py  framework.py  generator.py
src/okapy/features/: __init__.py
src/okapy/features/auth/: __init__.py
src/okapy/features/celery/: __init__.py
src/okapy/features/jwt/: __init__.py
src/okapy/features/refresh/: __init__.py
src/okapy/features/s3/: __init__.py
src/okapy/features/storage/: __init__.py
src/okapy/frameworks/: __init__.py
src/okapy/frameworks/django/: __init__.py
src/okapy/frameworks/fastapi/: __init__.py
src/okapy/frameworks/flask/: __init__.py
src/okapy/generators/: __init__.py
src/okapy/templates/: README.md
src/okapy/templates/django/: requirements.txt.jinja
src/okapy/utils/: shell.py  templating.py
src/okepy/: __init__.py  __main__.py
src/okepy/cli/: __init__.py  app.py  wizard.py
src/okepy/cli/commands/: __init__.py  create.py
src/okepy/core/: config.py  context.py  feature.py  framework.py  generator.py  registry.py
src/okepy/features/: __init__.py
src/okepy/features/auth/: __init__.py
src/okepy/features/celery/: __init__.py
src/okepy/features/cloudinary/: __init__.py
src/okepy/frameworks/: __init__.py
src/okepy/generators/: __init__.py
src/okepy/plugins/: __init__.py  loader.py
src/okepy/templates/: README.md
src/okepy/utils/: console.py  files.py  shell.py  templating.py
tests/: test_config.py  test_context.py  test_django_auth_defaults.py  test_django_wiring.py  test_registry.py
tests/integration/: test_django_e2e.py
(+59 files in other folders)
