[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "okepy"
version = "0.1.1"
description = "The Python equivalent of create-vite: an interactive, modular, plugin-driven CLI that scaffolds production-ready Python backend projects."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "okepy contributors" }]
keywords = ["cli", "scaffold", "generator", "django", "fastapi", "flask", "boilerplate", "vite"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "questionary>=2.0",
    "pydantic>=2.6",
    "jinja2>=3.1",
    "tomlkit>=0.12",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
]

[project.scripts]
okepy = "okepy.cli.app:app"

[project.entry-points."okepy.features"]
# Built-in features are registered in code; third-party plugins add entries here.

[project.urls]
Homepage = "https://github.com/okepy/okepy"
Repository = "https://github.com/okepy/okepy"
Documentation = "https://github.com/okepy/okepy#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/okepy"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/okepy/cli/**" = ["B008"]
"tests/**" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
